syntax = "proto3";

package horrea;

option go_package = "github.com/pleb/prod/horrea/pb";

import "google/protobuf/empty.proto";

service Horrea {
    // streamed PUT. No return value
    rpc PutContent(stream PutContentReq) returns (google.protobuf.Empty) {}

    // streamed S3 GET.
    rpc GetContent(GetContentReq) returns (stream Chunk) {}
}

// Data carrier.
message Chunk {
    bytes data = 1;
}

// Data blob type.
enum BlobType {
    Raw     = 0;    // Raw data blob.
}

// Data blob attributes.
message BlobInfo {
    BlobType    blobType = 1;   // Blob type.
    int64       size = 2;       // Blob size in bytes.
    string      major = 3;      // Major key string.
    string      minor = 4;      // Minor key string.
}

// structured PUT
message PutContentReq {
    oneof input {
        BlobInfo    info = 1;   // Blob attributes. First message.
        Chunk       chunk = 2;  // Data chunk. Subsequent messages.
    }
}

// structured GET
message GetContentReq {
    BlobInfo    info = 1;   // Blob attributes.
}
